It will add form for user to select movie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
   <div class="container">
     <h1>Movie Tickets</h1>
+    <p>Come and buy your movie tickets here!</p>
+    <form id="tickets">
+      <h2>Select your Movie:</h2>
+      <select class="form-control" id="movie">
+        <option value="black-widow">Black Widow</option>
+        <option value="spirited-away">Spirited Away</option>
+        <option value="dark-crystal">Dark Crystal</option>
+        <option value="never-ending-story">Never Ending Story</option>
+      </select>
+    </form>
   </div>
 </body>
 </html>
