It will add forms for times and age

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
         <option value="dark-crystal">Dark Crystal</option>
         <option value="never-ending-story">Never Ending Story</option>
       </select>
+      <h2>Select time:</h2>
+      <select class="form-control" id="time">
+        <option value="midnight">12:00am</option>
+        <option value="2am">2:00am</option>
+        <option value="noon">12:00pm</option>
+        <option value="2pm">2:00pm</option>
+      </select>
+      <h2>Select Age:</h2>
+      <select class="form-control" id="age">
+        <option value="child">Child</option>
+        <option value="teen">Teen</option>
+        <option value="adult">Adult</option>
+        <option value="elder">Elder</option>
+      </select>
     </form>
   </div>
 </body>
