It will add empty div to put total price later

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>Movie Tickets</h1>
-    <p>Come and buy your movie tickets here!</p>
+    <p>Come and buy your movie tickets here! Black Widow's first release happens at midnight!</p>
     <form id="tickets">
       <h2>Select your Movie:</h2>
       <select class="form-control" id="movie">
@@ -33,6 +33,12 @@
         <option value="adult">Adult</option>
         <option value="elder">Elder</option>
       </select>
+      <div id="show-price">
+        <h2>Total Price</h2>
+        <div id="total-price">
+          
+        </div>
+      </div>
     </form>
   </div>
 </body>
