It will save selected options in a veriable

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <form id="tickets">
       <h2>Select your Movie:</h2>
       <select class="form-control" id="movie">
-        <option value="black-widow">Black Widow</option>
-        <option value="spirited-away">Spirited Away</option>
-        <option value="dark-crystal">Dark Crystal</option>
-        <option value="never-ending-story">Never Ending Story</option>
+        <option value="5">Black Widow</option>
+        <option value="3">Spirited Away</option>
+        <option value="1">Dark Crystal</option>
+        <option value="2">Never Ending Story</option>
       </select>
       <h2>Select time:</h2>
       <select class="form-control" id="time">
@@ -28,15 +28,15 @@
       </select>
       <h2>Select Age:</h2>
       <select class="form-control" id="age">
-        <option value="child">Child</option>
-        <option value="teen">Teen</option>
-        <option value="adult">Adult</option>
-        <option value="elder">Elder</option>
+        <option value="2">Child</option>
+        <option value="3">Teen</option>
+        <option value="5">Adult</option>
+        <option value="1">Elder</option>
       </select>
       <div id="show-price">
         <h2>Total Price</h2>
         <div id="total-price">
-          
+
         </div>
       </div>
     </form>
