--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <form id="tickets">
       <h2>Select your Movie:</h2>
       <select class="form-control" id="movie">
-        <option value="5">Black Widow</option>
-        <option value="3">Spirited Away</option>
-        <option value="1">Dark Crystal</option>
+        <option value="1">Black Widow</option>
+        <option value="2">Spirited Away</option>
+        <option value="2">Dark Crystal</option>
         <option value="2">Never Ending Story</option>
       </select>
       <h2>Select time:</h2>
       <select class="form-control" id="time">
-        <option value="midnight">12:00am</option>
-        <option value="2am">2:00am</option>
-        <option value="noon">12:00pm</option>
-        <option value="2pm">2:00pm</option>
+        <option value="1">12:00am</option>
+        <option value="2">2:00am</option>
+        <option value="1">12:00pm</option>
+        <option value="2">2:00pm</option>
       </select>
       <h2>Select Age:</h2>
       <select class="form-control" id="age">
         <option value="2">Child</option>
         <option value="3">Teen</option>
-        <option value="5">Adult</option>
+        <option value="3">Adult</option>
         <option value="1">Elder</option>
       </select>
       <div id="show-price">
