It will transfer information from script2 file to scripts file

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
         <option value="3">Adult</option>
         <option value="1">Elder</option>
       </select>
-      <div id="show-price">
-        <h2>Total Price</h2>
-        <div id="total-price">
-
-        </div>
       </div>
+      <button type="submit" class="btn">Submit</button>
     </form>
+    <div id="show-price">
+      <h2>Total Price</h2>
+      <div id="total-price">
+
+      </div>
   </div>
 </body>
 </html>
